--- a/Wednesday_Requests_and_APIs_Lecture-Completed.ipynb
+++ b/Wednesday_Requests_and_APIs_Lecture-Completed.ipynb
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -14474,28 +14474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You caught  Pikachu is 4 meters tall and weights 60 kilograms\n",
-      "There was a 404 error\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15592\\3688691326.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m \u001b[0mcatch_that_pokemon\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15592\\3688691326.py\u001b[0m in \u001b[0;36mcatch_that_pokemon\u001b[1;34m()\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m             \u001b[0mpokemon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"What pokemon did you spot? return to leave the grass.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m             \u001b[0mmy_new_pokemon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_pokemon_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpokemon\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"You caught \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmy_new_pokemon\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15592\\3688691326.py\u001b[0m in \u001b[0;36mget_pokemon_info\u001b[1;34m(self, pokemon)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_pokemon_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpokemon\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mpoke_stats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpokemon\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mpokemon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpoke_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'species'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mpoke_height\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpoke_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'height'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mpoke_weight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpoke_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'weight'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "You caught Pikachu. It is 4 meters tall and weights 60 kilograms\n"
      ]
     }
    ],
@@ -14504,25 +14490,26 @@
     "    base_url = \"https://pokeapi.co/api/v2\" \n",
     "\n",
     "    def _get(self, pokemon):\n",
-    "        request_url = f'https://pokeapi.co/api/v2/pokemon/{pokemon}'\n",
+    "        request_url = f'{PokeAPI.base_url}/{pokemon}'\n",
     "        poke_response = requests.get(request_url)\n",
     "        if poke_response.ok == True:\n",
     "            return poke_response.json()\n",
     "        else:\n",
     "            print(f\"There was a {poke_response.status_code} error\")\n",
+    "    \n",
     "    def get_pokedex(self):\n",
-    "        pokedex = 'https://pokeapi.co/api/v2/pokemon'\n",
+    "        pokedex = f'{PokeAPI.base_url}/pokemon'\n",
     "        poke_resp = requests.get(pokedex)\n",
     "        if poke_resp.ok == True:\n",
     "            poke_entries = poke_resp.json()\n",
     "        else:\n",
     "            print(f\"There was a {pokedex.status_code} error\")\n",
-    "        poke_entry = poke_entries['results']['name']\n",
-    "        return poke_entry\n",
+    "        poke_dex = {poke['name'] for poke in self._get('pokemon?limit=1154')['results']}\n",
+    "        return poke_dex\n",
     "\n",
     "    def get_pokemon_info(self, pokemon):\n",
-    "        poke_stats = self._get(pokemon)\n",
-    "        pokemon = poke_stats['species']\n",
+    "        poke_stats = self._get(f'pokemon/{pokemon}')\n",
+    "        pokemon = poke_stats['species']['name']\n",
     "        poke_height = poke_stats['height']\n",
     "        poke_weight = poke_stats['weight']\n",
     "        pokemon_stats = PokemonHW(pokemon, poke_height, poke_weight)\n",
@@ -14543,20 +14530,22 @@
     "\n",
     "def catch_that_pokemon():\n",
     "    catch = PokeAPI()\n",
-    "    # pokedex = catch.get_pokedex()\n",
-    "    # print(pokedex)\n",
+    "    pokedex = catch.get_pokedex()\n",
     "    pokemon = ''\n",
     "    while True:\n",
     "        if pokemon == 'return':\n",
     "            break\n",
     "        pokemon = input(\"What pokemon did you spot? return to leave the grass.\").lower()\n",
-    "        my_new_pokemon = catch.get_pokemon_info(pokemon)\n",
-    "        print(\"You caught\", my_new_pokemon)\n",
-    "        \n",
+    "        if pokemon in pokedex:\n",
+    "            my_new_pokemon = catch.get_pokemon_info(pokemon)\n",
+    "            print(\"You caught\", my_new_pokemon)\n",
+    "        else:\n",
+    "            (\"Please enter a pokemon\")       \n",
     "        \n",
     "        \n",
     "\n",
     "catch_that_pokemon()\n",
+    "#Sorry it's late but I wanted it to be good.\n",
     "        "
    ]
   }
